<resources>
    <string name="app_name" translatable="false">ReceiptBox</string>
    <string name="title_activity_add" translatable="true">Add Receipt</string>

    <!-- Main -->

    <!-- CreateAccount -->

    <!-- LoginAccount -->

    <!-- Home -->

    <!-- AddReceipt -->
    <string name="add_edittext_place" translatable="true">Place and/or Item(s)</string>
    <string name="add_edittext_amount" translatable="true">Amount</string>

    <!-- NewReceipts -->
    <string name="new_action_archive" translatable="true">Archive Receipts</string>
    <string name="new_action_clear" translatable="true">Clear Receipts</string>

    <!-- ArchivedReceipts -->

    <string name="title_activity_central" translatable="false">CentralActivity</string>
    <string name="title_archived" translatable="true">Archived Receipts</string>
    <string name="title_receipts" translatable="true">Receipts</string>
    <string name="add_card_payment" translatable="true">Card Payment</string>
    <string name="receipt_item_title" translatable="true">Product Item Title</string>
    <string name="save_receipt" translatable="true">Save Receipt</string>

    <string-array name="receipt_types" translatable="true">
        <item>Food</item>
        <item>Entertainment</item>
        <item>Transport</item>
        <item>Health</item>
        <item>Other Household</item>
    </string-array>
    <string name="title_activity_settings" translatable="true">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->

    <!-- Example settings for Data & Sync -->

    <!-- Example settings for Notifications -->

    <string name="action_settings" translatable="true">Settings</string>
    <string name="pref_default_currency" translatable="false">$</string>
    <string name="pref_title_currency" translatable="true">Currency</string>
    <string name="currency_key" translatable="false">currency</string>
    <string name="default_currency" translatable="false">$</string>
    <string name="receipt_date_hint" translatable="true">Enter Receipt Date</string>


    <string name="start_phone_auth" translatable="true">Start</string>
    <string name="verify_phone_auth" translatable="true">Verify</string>
    <string name="resend_phone_auth" translatable="true">Resend</string>
    <string name="hint_phone_number" translatable="true">+48 300 300 300, Phone Number </string>
    <string name="hint_verification_code" translatable="true">Verification Code</string>
    <string name="status_code_sent" translatable="true">Code Sent</string>
    <string name="status_verification_failed" translatable="true">Verification failed</string>
    <string name="status_verification_succeeded" translatable="true">Verification succeeded</string>
    <string name="status_sign_in_failed" translatable="true">Sign-in failed</string>
    <string name="instant_validation" translatable="true">(instant validation)</string>
    <string name="firebase_status_fmt" translatable="true"></string>
    <string name="signed_in" translatable="true">Signed In</string>
    <string name="signed_out" translatable="true">Signed Out</string>
    <string name="phone_title_text"></string>
    <string name="desc_firebase_lockup">App Icon</string>
    <string name="sign_out" translatable="true">Sign Out</string>
    <string name="title_account" translatable="true">Your Account</string>
    <string name="unauth_storage_message">Receipts will be stored on Device</string>
    <string name="auth_storage_message">Receipts will be stored Servers too.</string>
    <string name="receipt_created_message">New Receipt Added</string>
    <string name="choose_receipt_date_tapping_will_open_a_date_picker_dialog_content_description">Choose Receipt Date. Tapping will open a date picker dialog</string>
    <string name="enter_place_of_receipt_content_description">Enter Place of Receipt</string>
    <string name="enter_receipt_amount_cd">Enter Receipt Amount</string>
    <string name="tap_to_select_or_unselect_card_payment_cd">Tap to Select or Unselect Card Payment</string>
    <string name="tap_to_open_spinner_to_choose_receipt_category_cd">Tap to Open Spinner to Choose Receipt Category</string>
    <string name="tap_button_to_save_receipt_cd">Tap button to save receipt</string>
    <string name="tap_to_send_code_to_verify_cd">Tap to Send Code to Verify</string>
    <string name="tap_to_send_your_number_to_start_sms_verification_cd">Tap to Send Your Number to Start SMS Verification</string>
    <string name="resend_sms_cd">Resend SMS</string>
    <string name="tap_to_sign_out_cd">Tap to Sign Out</string>
    <string name="sign_in_process_status_cd">Sign In Process Status</string>
    <string name="tap_to_open_page_to_create_receipt_cd">Tap to Open Page to Create Receipt</string>
    <string name="error_form_filled_message">Check if its filled correctly</string>
    <string name="reload_message">Tap the Tab to reload</string>
    <string name="tap_to_open_page_to_create_receipt_content_description">Tap to Open Page to Create Receipt</string>
    <string name="add_receipts_cd">Add Receipts</string>
    <string name="local_deletion_alert">Receipts deleted when not logged in, will be available in cloud, if they are backed up previously.</string>
    <string name="invalid_phone_error">Invalid phone number.</string>
    <string name="quota_exceeded_message">Quota exceeded.</string>
    <string name="invalid_code">Invalid code.</string>
    <string name="verification_field_empty_error">Cannot be empty.</string>


</resources>